--- a/aspnet-core/src/TCEcommerce.DbMigrator/appsettings.json
+++ b/aspnet-core/src/TCEcommerce.DbMigrator/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=TCEcommerce;Trusted_Connection=True"
+    "Default": "Server=DESKTOP-5P4PJBI\\SQLEXPRESS;Database=TCEcommerce;User Id=sa;Password=1234$"
   },
   "OpenIddict": {
     "Applications": {
