feat: Seeding data

--- a/aspnet-core/src/TCEcommerce.DbMigrator/appsettings.json
+++ b/aspnet-core/src/TCEcommerce.DbMigrator/appsettings.json
@@ -7,20 +7,12 @@
       "TCEcommerce_Web": {
         "ClientId": "TCEcommerce_Web",
         "ClientSecret": "1q2w3e*",
-        "RootUrl": "https://localhost:44363"
+        "RootUrl": "https://localhost:5002"
       },
-      "TCEcommerce_App": {
-        "ClientId": "TCEcommerce_App",
-        "RootUrl": "http://localhost:4200"
-      },
-      "TCEcommerce_BlazorServerTiered": {
-        "ClientId": "TCEcommerce_BlazorServerTiered",
+      "TCEcommerce_Admin": {
+        "ClientId": "TCEcommerce_Admin",
         "ClientSecret": "1q2w3e*",
-        "RootUrl": "https://localhost:44391"
-      },
-      "TCEcommerce_Swagger": {
-        "ClientId": "TCEcommerce_Swagger",
-        "RootUrl": "https://localhost:44340"
+        "RootUrl": "http://localhost:5001"
       }
     }
   }
