feat: Testing integrate with openiddict

--- a/aspnet-core/src/TCEcommerce.Admin.HttpApi.Host/appsettings.json
+++ b/aspnet-core/src/TCEcommerce.Admin.HttpApi.Host/appsettings.json
@@ -3,15 +3,16 @@
     "CorsOrigins": "https://*.TCEcommerce.com,http://localhost:4200"
   },
   "ConnectionStrings": {
-    "Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=TCEcommerce;Trusted_Connection=True"
+    "Default": "Server=DESKTOP-5P4PJBI\\SQLEXPRESS;Database=TCEcommerce;User Id=sa;Password=1234$"
   },
   "Redis": {
-    "Configuration": "127.0.0.1"
+    "Configuration": "127.0.0.1",
+    "IsEnabled": "false"
   },
   "AuthServer": {
-    "Authority": "https://localhost:44362",
+    "Authority": "https://localhost:5000",
     "RequireHttpsMetadata": "true",
-    "SwaggerClientId": "TCEcommerce_Swagger"
+    "SwaggerClientId": "TCEcommerce_Admin_Swagger"
   },
   "StringEncryption": {
     "DefaultPassPhrase": "Kbn9278nHQwE6PY2"
