--- a/aspnet-core/src/TCEcommerce.AuthServer/appsettings.json
+++ b/aspnet-core/src/TCEcommerce.AuthServer/appsettings.json
@@ -2,11 +2,11 @@
   "App": {
     "SelfUrl": "https://localhost:44362",
     "ClientUrl": "http://localhost:4200",
-    "CorsOrigins": "https://*.TCEcommerce.com,http://localhost:4200,https://localhost:44367,https://localhost:44340",
-    "RedirectAllowedUrls": "http://localhost:4200,https://localhost:44363,https://localhost:44367,https://localhost:44391"
+    "CorsOrigins": "https://*.TCEcommerce.com,http://localhost:4200,https://localhost:5001,https://localhost:5002",
+    "RedirectAllowedUrls": "http://localhost:4200,https://localhost:44363,https://localhost:5001,https://localhost:5002"
   },
   "ConnectionStrings": {
-    "Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=TCEcommerce;Trusted_Connection=True"
+    "Default": "Server=DESKTOP-5P4PJBI\\SQLEXPRESS;Database=TCEcommerce;User Id=sa;Password=1234$"
   },
   "Redis": {
     "Configuration": "127.0.0.1"
