--- a/aspnet-core/src/TCEcommerce.DbMigrator/appsettings.json
+++ b/aspnet-core/src/TCEcommerce.DbMigrator/appsettings.json
@@ -12,7 +12,11 @@
       "TCEcommerce_Admin": {
         "ClientId": "TCEcommerce_Admin",
         "ClientSecret": "1q2w3e*",
-        "RootUrl": "http://localhost:5001"
+        "RootUrl": "http://localhost:4200"
+      },
+      "TCEcommerce_Admin_Swagger": {
+        "ClientId": "TCEcommerce_Admin_Swagger",
+        "RootUrl": "https://localhost:5001"
       }
     }
   }
