--- a/aspnet-core/src/TCEcommerce.HttpApi.Host/appsettings.json
+++ b/aspnet-core/src/TCEcommerce.HttpApi.Host/appsettings.json
@@ -3,13 +3,13 @@
     "CorsOrigins": "https://*.TCEcommerce.com,http://localhost:4200"
   },
   "ConnectionStrings": {
-    "Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=TCEcommerce;Trusted_Connection=True"
+    "Default": "Server=DESKTOP-5P4PJBI\\SQLEXPRESS;Database=TCEcommerce;User Id=sa;Password=1234$"
   },
   "Redis": {
     "Configuration": "127.0.0.1"
   },
   "AuthServer": {
-    "Authority": "https://localhost:44362",
+    "Authority": "https://localhost:5000",
     "RequireHttpsMetadata": "true",
     "SwaggerClientId": "TCEcommerce_Swagger"
   },
